<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
   <name>madgwick_filter_ros2</name>
   <version>1.0.0</version>
   <description>This package is for ROS2 wrapper of madgwick filter.</description>
   <maintainer email="hyun91015@gmail.com">Changhyeon Kim</maintainer>
   <license> MIT </license>

   <buildtool_depend>ament_cmake</buildtool_depend>
   <depend>rclcpp</depend>

   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
   
   <export>
      <build_type>ament_cmake</build_type>
   </export>
</package>
